--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/Portfolio.css">
 		<link rel="stylesheet" href="css/responsiveness.css">
-		<link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 		<link rel="icon" type="image/png"     href="./assets/avatar1.png">
 	</head>
 	<body>				
@@ -42,29 +42,27 @@
 
 		<section id="page" class="main-header animated fadeIn slower">
 			<div class="overlay"></div>
-			<div class="d-flex align-self-end container" >				
-				<h1 id="typewriter"></h1>
-				
+			<div class="d-flex align-self-end type-container container" >				
+				<h1 id="typewriter"></h1>	
 			</div>
-			<div class="main-icon">
-				
-			</div>
-			<i class="fas fa-arrow-alt-circle-down"></i>
 		</section>
 
 		
 		<!--work  -->
 		<section id='work'>
 			<div class="container work-page">
+				<!-- <div class="header-icon wow bounceInRight">
+					<i class="fas fa-tasks"></i>
+				</div> -->
 				<div class="row">
 					<div class="col-md-12">
-						<p class="work-page-title">I <strong>design and develop</strong> websites that are responsive <em>on all cross platforms</em></p>
+						<h2 class="work-page-title">My projects</h2>
 					</div>
 				</div>
 
 				<div class="row justify-content-center">
 					<div class="col-lg-10 col-md-10 col-sm-10 text-center">
-						<a href="https://planetidea.netlify.com" class="work-title" target="_blank"><h6>Planet Idea Engineering<span class=" d-block dotted-line">...</span></h6></a>
+						<a href="https://planetidea.netlify.com" target="_blank" class="work-title"><h6 >Planet Idea Engineering<span class=" d-block dotted-line">...</span></h6></a>
 					</div>
 				</div>
 				<div class="row work-rep justify-content-center">
@@ -184,15 +182,15 @@
 		<section id='contact-us'>
 				<div class="container  site-page-work" id="contact">
 					<div class="row">
-						<div class="col-md-6 col-lg-6 col-sm-10">
+						<div class="col-md-8 col-lg-8 col-sm-10">
 							<h6 class="contact-page-title py-5">I'm always open for projects. You can find some of my other projects on <a href="https://github.com/AbdQaadir" target="_blank">github</a>, you can as well find me on <a href="https://web.facebook.com/quadri.abdlateef" target="_blank">facebook</a>, or on <a href="https://twitter.com/Abd_Qaadir" target="_blank">twitter.</a></h6>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-10 d-block py-5">
 								<h4 py-5>Have a question? <span>You can reach me on</span> <input type="text" id="phoneNumber"></h4>
 							</div>
 					</div>
-					<div class="row py-5">
-						<div class="col-lg-6 col-md-6 col-sm-10 email-me py-5">
+					<div class="row py-5 justify-content-center">
+						<div class="col-lg-6 col-md-10 col-sm-10 email-me py-5">
 							<div class="email-icon">
 									<i class="fas fa-envelope hvr-bounce-out "></i>
 							</div>
@@ -215,7 +213,7 @@
 									</p>
 								</form>
 						</div>
-						<div class="col-lg-6 text-center col-md-6 col-sm-10 d-block align-self-end">
+						<div class="col-lg-6 text-center col-md-8 col-sm-10 d-block align-self-end">
 								<img src="/assets/avatar1.png" alt="avatar" class="avatar">
 						</div>
 					</div>
